# flappy_plane

./: CMakeLists.txt  background.cpp  background.h  ground.cpp  ground.h  main.cpp  player.cpp  player.h  rocks.cpp  rocks.h  score.cpp  score.h
assets/: ground.json  rock.json
libs/: font.cpp  font.h  sprite.h  text.cpp  text.h  texture.h  texturemap.cpp  texturemap.h
